[es] rename main -> src, extract src/test to root, add cli

--- a/express-sequelize/bin/install
+++ b/express-sequelize/bin/install
@@ -24,6 +24,7 @@ yarn add \
      @types/superagent \
      chai \
      mocha \
+     sequelize-cli \
      sinon \
      sinon-chai \
      supertest \
